# Atriz_rvr

./: .gitignore  .pylintrc  CHANGELOG.md  DIAGRAMA_DRIVER_RVR.md  GUIA_COMPLETA_LIDAR.md  LICENSE  LIDAR_INTEGRATION_SUMMARY.md  PROJECT_ORGANIZATION_REPORT.md  README.md  commit_msg.txt  pyrightconfig.json  run_tests.sh  setup_python_path.py  start_ros.sh
.cursor/rules/: catkin-build-system.mdc  debugging-testing.mdc  hardware-interface.mdc  launch-files.mdc  message-service-development.mdc  project-structure.mdc  python-ros-standards.mdc  ros-development.mdc  safety-emergency-procedures.mdc  simulation-testing.mdc  sphero-sdk-integration.mdc
atriz_rvr_driver/: CMakeLists.txt  package.xml  setup.py
atriz_rvr_driver/launch/: atriz_rvr_node.launch  hw_controller.launch  hw_controller_maintenance.launch  lidar_only.launch  restart_hw_controller.launch  rvr_with_lidar.launch  rvr_with_lidar_autonomous.launch
atriz_rvr_driver/scripts/: .fw  Atriz_rvr_node.py  cmd_vel_rviz.py  degrees_control_example.py  obstacle_avoidance.py  rvr-ros-restarter.py  rvr-ros.py  rvr_lidar_integration.py  rvr_tools.py  sphero_sdk_config.py
atriz_rvr_driver/scripts/sphero_sdk/asyncio/client/firmware/: rvr_fw_check_async.py
atriz_rvr_driver/scripts/sphero_sdk/common/protocol/: api_sphero_header.py
atriz_rvr_msgs/: CMakeLists.txt  package.xml
atriz_rvr_msgs/msg/: ControlState.msg  Encoder.msg  InfraredMessage.msg  SystemInfo.msg
atriz_rvr_msgs/srv/: ConfigureStreaming.srv  GetControlState.srv  GetEncoders.srv  GetRGBCSensorValues.srv  GetSystemInfo.srv  MoveTimed.srv  RawMotors.srv  SendInfraredMessage.srv  SetDriveParameters.srv  SetIREvading.srv  SetIRMode.srv  SetLEDRGB.srv  SetMultipleLEDs.srv  StartStreaming.srv
atriz_rvr_serial/: CMakeLists.txt  package.xml
docs/: README.md  packages_README.md
docs/driver/: DRIVER_FUNCTIONALITY_GUIDE.md
docs/scripts/: GRADOS_DIRECTOS_README.md  LINTER_ERRORS_FIXED.md  PYTHON_IMPORT_SETUP.md
docs/testing/: README_TESTING.md
launch/: test_functionalities.launch
scripts/: README.md  launch_rgbc_service.sh  rgbc_sensor_service.py  test_rgbc_simple.py
scripts/core/: Atriz_rvr_node.py  __init__.py  sphero_sdk_config.py
scripts/estudiantes/: 00_LEEME_PRIMERO.md  01_avanzar.py  02_girar.py  03_cuadrado.py  04_giro_preciso.py  05_sensor_color.py  10_movimiento_completo.py  11_sensor_avanzado.py  90_template.py  99_test_ctrl_c.py  GUIA_PASO_A_PASO.md  README.md  REFERENCIAS.md  SEGUIDOR_LINEA_EXPLICACION.md  calibracion_colores.json  seguidor_config.json  seguidor_linea_pid_demo.py
scripts/examples/: README.md  README_rgbc_service.md  color_measurement_analysis.py  continuous_rgb_measurement.py  example_encoder_test.py  normal_color_sensing.py  random_walking.py  rgbc_direct_test.py  rvr_joystick_control.py  test_rgbc_service.py
scripts/lydar/: GUIA_COMPLETA_LIDAR.md  INTEGRACION_RVR_LIDAR.md  README.md  install_lidar_driver.sh  test_lidar.py
scripts/tools/: color_listener.py
scripts/utilities/: test_both_topics.py
sphero_rvr/launch/: bringup_atriz_rvr.launch
sphero_rvr/scripts/: .random_walking.py.swp  random_walking.py
sphero_rvr_hw/: CMakeLists.txt
sphero_rvr_hw/launch/: atriz_rvr_node.launch
sphero_rvr_hw/scripts/: .fw  Atriz_rvr_node.py  GRADOS_CONTROL_README.md  analyze_driver_rvr.py  example_degrees_control.py  simple_service_server.py  simple_velocity_publisher.py  simple_velocity_subscriber.py  test_both_topics.py
sphero_rvr_msgs/: CMakeLists.txt
sphero_rvr_msgs/msg/: DegreesTwist.msg
sphero_rvr_msgs/srv/: SendIRMessages.srv
testing_scripts/: README.md
testing_scripts/automated/: run_complete_tests.py  test_atriz_rvr_driver.py
testing_scripts/diagnostic/: diagnose_system.py  quick_diagnostic.py  test_diagnostic.py
testing_scripts/interactive/: test_corrected.py  test_individual_functions.py  test_interactive.py
testing_scripts/launch/: launch_tests.sh
