<?xml version="1.0"?>
<package format="2">
  <name>atriz_rvr_driver</name>
  <version>0.0.2</version>
  <description>The Sphero RVR ROS hardware package. This package is based on the free sphero C++ library from Rud Merriam (https://bitbucket.org/rmerriam/rvr-cpp).</description>

  <maintainer email="atriz@udenar.edu.co">Atriz Team - Universidad de Nariño</maintainer>

  <license>MIT</license>

  <author email="atriz@udenar.edu.co">Atriz Team</author>
  <author email="simon.haller-seeber@uibk.ac.at">Simon M. Haller-Seeber</author>
  <author email="paddy-hofmann@web.de">Paddy</author>

  <url type="website">https://github.com/atriz-udenar/ros_sphero_rvr</url>
  <url type="repository">https://github.com/atriz-udenar/ros_sphero_rvr</url>
  <url type="bugtracker">https://github.com/atriz-udenar/ros_sphero_rvr/issues</url>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>atriz_rvr_serial</depend>
  <depend>tf</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>joint_limit_interface</depend>
  <depend>transmission_interface</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
